<resources>
    <string name="app_name">Video Meeting</string>
    <string name="welcome_to">Welcome to</string>
    <string name="video_meeting_conference_app">Video Meeting | conference app</string>
    <string name="sign_in_to_your_account">sign in to your account</string>
    <string name="email">Email</string>
    <string name="you_exemple_com">you@exemple.com</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don`t have an account?</string>
    <string name="sing_up">Sing Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_to_few_details_to_get_your_account_ready">We need to few details to get your account ready</string>
    <string name="first_name">First name</string>
    <string name="john">John</string>
    <string name="last_name">Last name</string>
    <string name="doe">Doe</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="incoming_meeting_invitation">Incoming meeting invitation</string>
    <string name="sending_meeting_invitation">Sending meeting invitation</string>
</resources>