<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:background="@color/colorBackground"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".activities.SignInActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <LinearLayout
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:id="@+id/layoutHeader"
                android:layout_height="@dimen/_150sdp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/welcome_to"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_width="wrap_content"
                    android:text="@string/video_meeting_conference_app"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_16ssp" />
            </LinearLayout>

            <TextView
                android:fontFamily="@font/ubuntu_regular"
                android:id="@+id/textSignInLabel"
                android:includeFontPadding="false"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:text="@string/sign_in_to_your_account"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutHeader" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSignIn"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                app:cardCornerRadius="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/textSignInLabel">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <TextView
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_width="match_parent"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp" />

                    <EditText
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/you_exemple_com"
                        android:id="@+id/inputEmail"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_width="match_parent"
                        android:text="@string/password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11ssp" />

                    <EditText
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/password_hint"
                        android:id="@+id/inputPassword"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:fontFamily="@font/ubuntu_bold"
                android:id="@+id/buttonSignIn"
                android:includeFontPadding="false"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:text="@string/sign_in"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintTop_toBottomOf="@id/cardSignIn" />

            <ProgressBar
                android:id="@+id/signInProgressBar"
                android:layout_height="@dimen/_25sdp"
                android:layout_width="@dimen/_25sdp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/buttonSignIn"
                app:layout_constraintEnd_toEndOf="@id/buttonSignIn"
                app:layout_constraintStart_toStartOf="@id/buttonSignIn"
                app:layout_constraintTop_toTopOf="@id/buttonSignIn" />

            <TextView
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:id="@+id/textNoAccount"
                android:includeFontPadding="false"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintTop_toBottomOf="@id/buttonSignIn" />

            <TextView
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:id="@+id/textSignUp"
                android:includeFontPadding="false"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:padding="@dimen/_6sdp"
                android:text="@string/sing_up"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textNoAccount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>